samples/_failures_safe/1761709287_479d25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff36db93.c: In function ‘main’:
./samples/SAFE/__tmp_ff36db93.c:155:5: error: expected declaration or statement at end of input
  155 |     if (!valid_input) {
      |     ^~
./samples/SAFE/__tmp_ff36db93.c:155:5: error: expected declaration or statement at end of input
